<resources>
    <string name="app_name">Android Sensors</string>
    <string name="motion_text">Motion</string>
    <string name="environmental_text">Environmental</string>
    <string name="position_text">Position</string>
    <string name="unavailable">Unavailable Sensor</string>
    <string name="tab_accelerometer">Accelerometer</string>
    <string name="tab_ambient_temperature">Ambient Temperature</string>
    <string name="tab_game_rotation_vector">Game Rotation</string>
    <string name="tab_geomagnetic_rotation_vector">Geomagnetic Rotation</string>
    <string name="tab_gravity">Gravity</string>
    <string name="tab_gyroscope">Gyroscope</string>
    <string name="tab_light">Light</string>
    <string name="tab_linear_acceleration">Linear Acceleration</string>
    <string name="tab_magnetic_field">Magnetic Field</string>
    <string name="tab_pressure">Pressure</string>
    <string name="tab_proximity">Proximity</string>
    <string name="tab_relative_humidity">Relative Humidity</string>
    <string name="tab_rotation_vector">Rotation Vector</string>
    <string name="tab_step_counter">Step Counter</string>
    <string name="value_text">-</string>
    <string name="gravity_text">%.7f m/s\u00B2</string>
    <string name="degrees_text">%d deg/s</string>
    <string name="tesla_text">%.7f μT</string>
    <string name="celsius_text">%d°C</string>
    <string name="pascal_text">%.7f hPa</string>
    <string name="percent_text">%d%%</string>
    <string name="float_text">%.7f</string>
    <string name="steps_text">%d steps</string>
    <string name="cm_text">%d cm</string>
    <string name="axis_x">X-Axis</string>
    <string name="axis_y">Y-Axis</string>
    <string name="axis_z">Z-Axis</string>
    <string name="rotation_x">X (Pitch)</string>
    <string name="rotation_y">Y (Roll)</string>
    <string name="rotation_z">Z (Yaw)</string>
    <string name="light_cloudy">Light Cloudy</string>
    <string name="light_overcast">Light Overcast</string>
    <string name="light_sunlight">Light Sunlight</string>
    <string name="light_full_moon">Light Full Moon</string>
    <string name="light_sunny">Light Sunny</string>
    <string name="content_description_steps">Steps</string>
</resources>