<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayoutX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/circular_progress_indicator_x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:trackThickness="15dp"
            app:indicatorSize="90dp"
            app:indicatorColor="@color/design_default_color_secondary" />

        <TextView
            android:id="@+id/axis_x_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/value_text"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/axis_x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/axis_x"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutZ"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutX">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/circular_progress_indicator_y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:trackThickness="15dp"
            app:indicatorSize="90dp"
            app:indicatorColor="@color/design_default_color_secondary" />

        <TextView
            android:id="@+id/axis_y_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/value_text"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/axis_y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/axis_y"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutY">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/circular_progress_indicator_z"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:trackThickness="15dp"
            app:indicatorSize="90dp"
            app:indicatorColor="@color/design_default_color_secondary" />

        <TextView
            android:id="@+id/axis_z_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/value_text"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/axis_z"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/axis_z"
            android:textSize="12sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>